# variant-confidence

./: .coverage  .gitignore  CHANGELOG.md  INVESTIGACION.md  LICENSE  README.md  SDD.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
data/cache/: clinvar_missense_2000.json
scripts/: bandit2sarif.py
tests/: test_alphamissense_join.py  test_calibration_ece.py  test_esm_eve_join.py  test_integration.py  test_missing_pattern.py  test_missing_scores.py  test_mondrian_fallback.py  test_pipeline.py  test_split_index_alignment.py  test_split_overlap.py
tests/fixtures/: alphamissense_sample.tsv  clinvar_sample.json  esm_eve_sample.tsv
variant_confidence/: __init__.py  cli.py  package.py  pipeline.py
variant_confidence/calib/: __init__.py  synthetic.py
variant_confidence/data/: __init__.py  alphamissense.py  dataset.py  esm_eve.py  integrate.py  loader.py
variant_confidence/metrics/: ece.py
variant_confidence/split/: __init__.py  temporal.py
